refactor: 꿀조합 목록 조회 관련 dto 수정